--- a/Week_7_image_scapping_Assignment.ipynb
+++ b/Week_7_image_scapping_Assignment.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "source": [
     "link : http://youtube-api-deploy-env.eba-ir2pwnix.ap-south-1.elasticbeanstalk.com/"
+    "Repository used in deployment : https://github.com/Madhusudhan161/Youtube_API_AWS"
    ]
   },
   {
