--- a/Week_7_image_scapping_Assignment.ipynb
+++ b/Week_7_image_scapping_Assignment.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "## declaring varaibles\n",
-    "api_key = \"AIzaSyBjCXRf9LqbY9R1yfK4RqBLfI-uIwQMdlM\"\n",
+    "api_key = \"your_api_key\"\n",
     "channel_ID = \"UCphU2bAGmw304CFAzy0Enuw\"\n",
     "uploads_id = \"UUphU2bAGmw304CFAzy0Enuw\"\n",
     "\n",
